--- a/day2/13_testStudy.html
+++ b/day2/13_testStudy.html
@@ -40,7 +40,6 @@
         }
         td {
             text-align: left;
-            font-weight: bold;
             border : 1px solid rgba(231, 223, 223, 0.733);
             border-collapse: collapse;
             padding : 5px 40px 5px 40px;
@@ -100,7 +99,9 @@
                 <li>아주 작은 소정의 활동비 지급</li>
                 <li>주기적인 회식</li>
             </ul>
+            <a href="../day3/ex_teststudy2.html">
             <img src="../media/java.jpg" width="200" height="250" style="margin-left: 200px;">
+            </a>
         </div>
     </div>
 </body>
