--- a/intro/introduce.html
+++ b/intro/introduce.html
@@ -24,11 +24,20 @@
             box-sizing: border-box;
             padding-left: 330px;
         }
+        #date {
+            font-size: medium;
+            font-style: italic;
+            text-align: center;
+            margin: 20px;
+        }
         .titlefont {
             font-size: x-large;
             font-weight: bold;
             padding-top: 20px;
             padding-bottom: 20px;
+            background-color: rgb(101, 169, 201);
+            display: block;
+            border-radius: 10px;
         }
         .box1-intext {
             margin: 20px auto;
@@ -46,6 +55,7 @@
             padding-left: 5px;
             padding-right: 10px;
         }
+        
     </style>
 </head>
 <body>
@@ -72,6 +82,10 @@
                     클릭!
                 </a>
             </div>
+            <div class="titlefont">
+                현재 시간
+            </div>
+            <div id="date"></div>
         </div>
         <div id="box2">
             <div class="titlefont">
@@ -133,3 +147,15 @@
     </div>
 </body>
 </html>
+<script>
+    setInterval(()=>{
+        let dt = new Date();
+        let time = document.querySelector("#date");
+        time.innerHTML = dt.getDate() 
+        + " - " + dt.getMonth() 
+        + " - " + dt.getDay()
+        + " <hr> " + dt.getHours() + " : "
+        + dt.getMinutes() + " : "
+        + dt.getSeconds();
+    }, 1000);
+</script>
