--- a/day5/ex_exstudy2.html
+++ b/day5/ex_exstudy2.html
@@ -129,7 +129,7 @@
             alert("성별을 체크해주세요.");
             return;
         }
-
+        // console.log(gender.value); 남자 = m / 여자 = f
         alert("가입되었습니다.");
     }
 </script>
