--- a/day6/ex_day6-Quiz2.html
+++ b/day6/ex_day6-Quiz2.html
@@ -40,5 +40,8 @@
             newul.appendChild(newli);
         }
         contents.appendChild(newul);
+        if (i % 2 == 0) {
+            document.createAttribute
+        }
     }
 </script>
