--- a/day7/11_Ajax.html
+++ b/day7/11_Ajax.html
@@ -12,6 +12,15 @@
             text-align: center;
             border-collapse: collapse;
         }
+        #contents th{
+            background-color: rgb(226, 233, 243);
+        }
+        #contents tr:nth-child(even){
+            background-color: rgb(134, 179, 247);
+        }
+        #contents tr:nth-child(odd){
+            background-color: rgb(228, 228, 228);
+        }
     </style>
 </head>
 <body>
