--- a/day9~10/ex_board-add.html
+++ b/day9~10/ex_board-add.html
@@ -71,7 +71,7 @@
                 </tr>
                 <tr>
                     <th>작성자</th>
-                    <td><input v-model="userId" type="text"></td>
+                    <td><input v-model="userId" type="text" disabled></td>
                 </tr>
                 <tr>
                     <th>내용</th>
@@ -94,7 +94,7 @@
             return {
                 // 변수 - (key : value)
                 title: "",
-                userId: "",
+                userId: "", // 세션 아이디
                 contents: "",
                 selectItem: 1
             };
@@ -127,7 +127,7 @@
         }, // methods
         mounted() {
             // 처음 시작할 때 실행되는 부분
-
+            this.userId = sessionStorage.getItem("sessionId");
         }
     });
 
